--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div class="bg bg2"></div>
     <div class="bg bg3"></div>
     <br /><br /><br />
-    <h1 class="name">Hello, my name is Joana</h1>
-    <p class="sub">I am a Graphic designer</p>
+    <h1 class="name">Greetings, fellow creatives!</h1>
+    <p class="sub">My name is Joana, I love design!</p>
     <br /><br /><br />
     <!--
             <h1 class="name">Joana Castaneda</h1>
@@ -42,14 +42,12 @@
         <div class="photo-itemLarge" data-aos="fade-up">
           <h3 class="title">ABOUT ME</h3>
           <p>
-            Graduate from St. Lawrence College in the Game Programming course.
-            Prior to pursuing a diploma in Game Programming, I adquired a degree
-            in graphic comunication design, and I worked for four years as a web and graphic
+            Prior to pursuing a diploma in Game Programming in Canada, I adquired a degree
+            in graphic comunication design in Mexico where I worked for four years as a web and graphic
             designer.
             <br /><br />
-            I want to continue my professional path in the technological field,
-            so I am constantly improving my skills to analyze and create
-            different strategies for the digital world successfully.
+            I am willing to learn and improve my skills to continue my path in the technological field, 
+            I like to analyze and think in different strategies to create effective content.
             <br />  <br />
 
             My work experience has been related to these 3 categories:
@@ -60,26 +58,13 @@
         <br />
 
 
-        <div class="container3">
-          <div class="box3">
-              <div class="columns3">
-                  <div><img src="images/1.svg" alt="Image 1" class="gallery-item" /></div>
-                  <div><br>Front end design<br> (web/mobile)</div>
-              </div>
-          </div>
-          <div class="box3">
-              <div class="columns3">
-                <div><img src="images/3.svg" alt="Image 1" class="gallery-item" /></div>
-                <div><br>Graphic design<br> (digital and printed)</div>
-              </div>
-          </div>
-          <div class="box3">
-              <div class="columns3">
-                <div><img src="images/2.svg" alt="Image 1" class="gallery-item" /></div>
-                <div><br>Comunication strategies</div>
-              </div>
-          </div>
+        <div class="container3titles">
+          <div class="box3titles"><img src="images/1c.svg" alt="Image 1" class="gallery-item3" /></div>
+          <div class="box3titles"><img src="images/2c.svg" alt="Image 2"  class="gallery-item3"/></div>
+          <div class="box3titles"><img src="images/3c.svg" alt="Image 3"  class="gallery-item3"/></div>
       </div>
+
+      
      
       <div style="text-align:center ;">  <br /><br /><br /> 
         <a href="Joana_Resume.pdf" class="btnDown1">▼ Download Resume</a><br /><br /><br /></div>
