--- a/web.html
+++ b/web.html
@@ -24,65 +24,77 @@
     <div class="container">
       <h3 class="title">MOBILE AND WEB PROJECTS</h3>
       <div class="projects" id="projectList">
+        <!--start one-->
         <div class="project" id="project1">
           <div>
-            <h2 class="titleWebP">Design for ACOMM</h2>
+            <h2 class="titleWebP">Design for PHIG</h2>
           </div>
           <p class="textWebP">
             Volunteer project to create the first website for the organization
-            <a href="https://dcgjoana.wixsite.com/phig"> PHIG</a> (Pleasant Hill
-            Instructional Garden).
-
-            <br />
-            (Project created with WIX)
+            <a
+              class="colorLinks"
+              href="https://dcgjoana.wixsite.com/phig"
+              target="_blank"
+            >
+              PHIG</a
+            >
+            (Pleasant Hill Instructional Garden).
           </p>
+
+          <p class="note">* Project created with WIX</p>
           <div class="images2">
             <img src="images/phig.jpg" alt="Image 1A" />
           </div>
           <button onclick="toggleDetails('details1')" class="btnDown">+</button>
           <div class="Det" id="details1" style="display: none">
             <p>
-              This is the first version not complete yet, still in progress to
-              add more sections, content and functionalities.
+              This is the first sketch, still in progress to add more sections,
+              content and functionalities.
             </p>
           </div>
         </div>
+        <!--end one-->
 
+        <!--start two-->
         <div class="project" id="project2">
           <div>
             <h2 class="titleWebP">Design for METCO</h2>
           </div>
           <p class="textWebP">
             Design and creation of the front end for the website
-            <a href="https://www.metco.com.mx/" target="_blank"
-              >Genuino Metco
-            </a>
-            company with a natural and friendly design.
-
-            <br />
-            (Project created with Wordpress)
+            <a
+              class="colorLinks"
+              href="https://www.metco.com.mx/"
+              target="_blank"
+              >Genuino Metco </a
+            >, company with a natural and friendly design.
           </p>
+
+          <p class="note">* Project created with Wordpress</p>
+
           <div class="images2">
             <img src="images/svetia6.jpg" alt="Image 2A" />
           </div>
           <button onclick="toggleDetails('details2')" class="btnDown">+</button>
           <div class="Det" id="details2" style="display: none">
             <p>
-              Make more intuitive the reservations for the food and simplied the
-              number of sections and pages. Include options to cancel, modified
-              and buy membership.
+              Development of 6 minisites that correspond each one to a different
+              product: Azúcar BC, Sweet-O, Svetia, Piloncillo Genuino, Mascabado
+              BC and Endulzante Genuino.
             </p>
           </div>
         </div>
-
+        <!--end two-->
+        <!--start three-->
         <div class="project" id="project3">
           <div>
             <h2 class="titleWebP">Design for ACOMM</h2>
           </div>
           <p class="textWebP">
             Currently working on the first section for the renovation of a
-            section in the website
+            section in the website-
             <a
+              class="colorLinks"
               href="https://www.figma.com/file/OppwNoqOIyFItBMcni8NOh/ACOMM?type=design&node-id=0%3A1&mode=design&t=w1FO1P6MFJVwm86A-1"
               target="_blank"
               >ACOMM </a
@@ -103,7 +115,7 @@
           </div>
         </div>
         <div class="project" id="project4">
-          <h2 class="titleWebP">Web game</h2>
+          <h2 class="titleWebP">Design 2D Game</h2>
           <p class="textWebP">Develop of a 2D game for the web using Phaser.</p>
           <div class="images">
             <img src="images/app1.jpg" alt="Image 4A" />
@@ -137,7 +149,7 @@
         </div>
         <div class="project" id="project6">
           <div>
-            <h2 class="titleWebP">Game for develop leadership skills</h2>
+            <h2 class="titleWebP">Design for Educational 2D Game</h2>
           </div>
           <p class="textWebP">
             Project to create a minigame where the employees of high hierarchy
