--- a/digital.html
+++ b/digital.html
@@ -23,18 +23,14 @@
 
     <section class="home-photo" style="background-color: white">
       <div class="photo-itemLarge" data-aos="fade-up">
-        <h3 class="title">ABOUT ME</h3>
+        <h3 class="title">CONTENT EXAMPLES</h3>
 
         <p>
-          Graduate from St. Lawrence College in the Game Programming course.
-          Prior to pursuing a diploma in Game Programming, I adquired a degree
-          in graphic comunication design, and I worked for four years as a web
-          and graphic designer.
+          Here are examples of my previous graphic design work, each piece
+          reflects my versatility and attention to detail, whether it's for
+          online platforms or printed materials.
 
           <br />
-          <br />
-
-          My work experience has been related to these 3 categories:
         </p>
       </div>
     </section>
