--- a/game.html
+++ b/game.html
@@ -24,18 +24,24 @@
 
     <section class="home-photo" style="background-color: white">
       <div class="photo-itemLarge" data-aos="fade-up">
-        <h3 class="title">ABOUT ME</h3>
+        <h3 class="title">CAPSTONE PROJECT</h3>
 
         <p>
-          Graduate from St. Lawrence College in the Game Programming course.
-          Prior to pursuing a diploma in Game Programming, I adquired a degree
-          in graphic comunication design, and I worked for four years as a web
-          and graphic designer.
+          Developed a speed-based 2D platformer using Unity, where the player
+          strives to reach the end of the level as quickly as possible while
+          maintaining combos and avoiding enemies. This project was completed in
+          12 weeks as part of my final semester in the program.
 
           <br />
           <br />
 
-          My work experience has been related to these 3 categories:
+          The following images showcase examples of the game’s UI, including the
+          splash screen, main menu, level selection menu, pause scene, as well
+          as some of the art.
+          <br />
+          <br />
+          At the bottom of the page, there is an example of the UI design for a
+          pixel art game
         </p>
       </div>
     </section>
@@ -48,20 +54,20 @@
       </div>
     </section>
 
-    <h3 class="title" style="margin-top: 35%">ABOUT ME</h3>
+    <h3 class="title" style="margin-top: 35%">LEVEL SCREENS</h3>
     <div class="responsive-table">
       <div class="cell" data-label="Name">
-        <img class="boceto" src="images/boceto1.jpg" />
+        <img class="boceto" src="images/GAME5.png" />
       </div>
       <div class="cell" data-label="Age">
-        <img class="boceto" src="images/boceto2.jpg" />
+        <img class="boceto" src="images/GAME8.jpg" />
       </div>
       <div class="cell" data-label="Country">
-        <img class="boceto" src="images/boceto3.jpg" />
+        <img class="boceto" src="images/game9.jpg" />
       </div>
     </div>
 
-    <h3 class="title" style="margin-top: 3%">ABOUT ME</h3>
+    <h3 class="title" style="margin-top: 3%">ANIMATIONS</h3>
     <div class="responsive-table">
       <div class="cell" data-label="Name">
         <video width="#" height="#" controls autoplay loop>
@@ -81,7 +87,7 @@
       </div>
     </div>
 
-    <h3 class="title" style="margin-top: 3%">ABOUT ME</h3>
+    <h3 class="title" style="margin-top: 3%">SKETCH</h3>
     <div class="responsive-table">
       <div class="cell" data-label="Name">
         <img class="boceto" src="images/boceto1.jpg" />
