--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
         <div class="photo-itemLarge" data-aos="fade-up">
           <h3 class="title">ABOUT ME</h3>
           <p>
-            Prior to pursuing a diploma in Game Programming in Canada, I adquired a degree
-            in graphic comunication design in Mexico where I worked for four years as a web and graphic
-            designer.
+            Before pursuing a diploma in Game Programming in Canada, 
+            I earned a degree in Graphic Communication Design in Mexico,
+             where I worked for four years as a web and graphic designer.
             <br /><br />
-            I am willing to learn and improve my skills to continue my path in the technological field, 
-            I like to analyze and think in different strategies to create effective content.
+            I am eager to learn and enhance my skills as I continue
+             my journey in the tech industry. I enjoy analyzing different
+              strategies to create effective content.
             <br />  <br />
 
             My work experience has been related to these 3 categories:
