--- a/extra.html
+++ b/extra.html
@@ -25,7 +25,7 @@
     <div class="bg bg2"></div>
     <div class="bg bg3"></div>
 
-    <h1 class="name">Contact</h1>
+    <h1 class="name">I’d Love to Hear from You!</h1>
     <p class="sub"></p>
 
     <!--
@@ -35,14 +35,16 @@
     <div class="firstInfo">
       <section class="">
         <br />
-        <h3 class="title">343 585-5290</h3>
-        <h3 class="title">dg.joana24@gmail.com</h3>
 
-        <div style="text-align: center">
+        <div class="responsive-container">
+          <img src="images/contact800.svg" class="responsive-image" />
+        </div>
+
+        <!-- <div style="text-align: center">
           <br />
           <a href="Joana_Resume.pdf" class="btnDown1">▼ Download Resume</a
           ><br /><br /><br />
-        </div>
+        </div> -->
         <!-- Add more items as needed -->
       </section>
     </div>
