--- a/web.html
+++ b/web.html
@@ -117,45 +117,54 @@
         <div class="project" id="project4">
           <h2 class="titleWebP">Design 2D Game</h2>
           <p class="textWebP">Develop of a 2D game for the web using Phaser.</p>
+          <p class="note">* Project created using Phaser</p>
           <div class="images">
             <img src="images/app1.jpg" alt="Image 4A" />
             <img src="images/app1b.jpg" alt="Image 4B" />
           </div>
           <button onclick="toggleDetails('details4')" class="btnDown">+</button>
-          <div class="details" id="details4" style="display: none">
+          <div class="Det" id="details4" style="display: none">
             <p>
-              School project. The game consist in avoid the obstacles increasing
-              gradually the speed.
+              School project, creation of a 2D game where players must navigate
+              obstacles while the speed gradually increases.
             </p>
           </div>
         </div>
         <div class="project" id="project5">
-          <h2 class="titleWebP">Directory</h2>
+          <h2 class="titleWebP">Mobile application for employees.</h2>
           <p class="textWebP">
-            Mobile app designed to consult information about different services
-            and products that the employees need to access.
+            Mobile app designed to provide employees with easy access to
+            information about various services and products.
+          </p>
+          <p class="note">
+            * Project created with programming languages like PHP, HTML, CSS,
+            SQL and JavaScript.
           </p>
           <div class="images">
             <img src="images/app_desc_1.jpg" alt="Image 5A" />
             <img src="images/app_desc_2.jpg" alt="Image 5B" />
           </div>
           <button onclick="toggleDetails('details5')" class="btnDown">+</button>
-          <div class="details" id="details5" style="display: none">
+          <div class="Det" id="details5" style="display: none">
             <p>
-              App of internal use in the gouvernament, includes localization
-              fonctions to show the closest companies to each user.
+              Internal government app with featuring localization functions to
+              help users find nearby services.
             </p>
           </div>
         </div>
         <div class="project" id="project6">
           <div>
-            <h2 class="titleWebP">Design for Educational 2D Game</h2>
+            <h2 class="titleWebP">
+              Mobile application for Educational 2D Game
+            </h2>
           </div>
           <p class="textWebP">
-            Project to create a minigame where the employees of high hierarchy
-            play to find out the best strategies and qualities of leadership.
-            The player must complete different levels and challenges in order to
-            finish the game.
+            Project to create a minigame for high-level employees to explore
+            effective leadership strategies and qualities.
+          </p>
+          <p class="note">
+            * Project created with programming languages like PHP, HTML, CSS,
+            SQL and JavaScript.
           </p>
 
           <div class="images">
@@ -163,8 +172,11 @@
             <img src="images/app_prof.jpg" alt="Image 6B" />
           </div>
           <button onclick="toggleDetails('details6')" class="btnDown">+</button>
-          <div class="details" id="details6" style="display: none">
-            <p>Détails supplémentaires pour le projet 4.</p>
+          <div class="Det" id="details6" style="display: none">
+            <p>
+              Players will complete various levels and challenges to finish the
+              game.
+            </p>
           </div>
         </div>
       </div>
