game page update

--- a/game.html
+++ b/game.html
@@ -56,31 +56,31 @@
 
     <h3 class="title" style="margin-top: 35%">LEVEL SCREENS</h3>
     <div class="responsive-table">
-      <div class="cell" data-label="Name">
+      <div class="cell">
         <img class="boceto" src="images/GAME5.png" />
       </div>
-      <div class="cell" data-label="Age">
+      <div class="cell">
         <img class="boceto" src="images/GAME8.jpg" />
       </div>
-      <div class="cell" data-label="Country">
+      <div class="cell">
         <img class="boceto" src="images/game9.jpg" />
       </div>
     </div>
 
     <h3 class="title" style="margin-top: 3%">ANIMATIONS</h3>
     <div class="responsive-table">
-      <div class="cell" data-label="Name">
+      <div class="cell">
         <video width="#" height="#" controls autoplay loop>
           <source src="images/playercompress.mp4" type="video/mp4" />
         </video>
       </div>
 
-      <div class="cell" data-label="Age">
+      <div class="cell">
         <video width="319" height="240" controls autoplay loop>
           <source src="images/compressAnimation.mp4" type="video/mp4" />
         </video>
       </div>
-      <div class="cell" data-label="Country">
+      <div class="cell">
         <video width="319" height="240" controls autoplay loop>
           <source src="images/compressDeadAnimation.mp4" type="video/mp4" />
         </video>
@@ -89,13 +89,13 @@
 
     <h3 class="title" style="margin-top: 3%">SKETCH</h3>
     <div class="responsive-table">
-      <div class="cell" data-label="Name">
+      <div class="cell">
         <img class="boceto" src="images/boceto1.jpg" />
       </div>
-      <div class="cell" data-label="Age">
+      <div class="cell">
         <img class="boceto" src="images/boceto2.jpg" />
       </div>
-      <div class="cell" data-label="Country">
+      <div class="cell">
         <img class="boceto" src="images/boceto3.jpg" />
       </div>
     </div>
