finihed general version

--- a/digital.html
+++ b/digital.html
@@ -61,7 +61,7 @@
     </div>
 
     <footer>
-      <p>© 2024 Graphic Designer Portfolio</p>
+      <p>My Portfolio / Last update October 2024</p>
     </footer>
 
     <script src="script.js"></script>
