--- a/extra.html
+++ b/extra.html
@@ -51,7 +51,7 @@
     <br />
 
     <footer>
-      <p>© 2024 Graphic Designer Portfolio</p>
+      <p>My Portfolio / Last update October 2024</p>
     </footer>
 
     <script src="script.js"></script>
