--- a/game.html
+++ b/game.html
@@ -22,7 +22,10 @@
       </nav>
     </header>
 
-    <section class="home-photo" style="background-color: white">
+    <section
+      class="home-photo"
+      style="background-color: white; margin-top: 0vh"
+    >
       <div class="photo-itemLarge" data-aos="fade-up">
         <h3 class="title">CAPSTONE PROJECT</h3>
 
@@ -46,7 +49,10 @@
       </div>
     </section>
 
-    <section class="home-photo" style="background-color: white">
+    <section
+      class="home-photo"
+      style="background-color: white; margin-bottom: 60vh"
+    >
       <div class="containerGame" style="background-color: white:  !important;">
         <img class="icon one" src="images/GAME1.jpg" />
         <img class="icon two" src="images/GAME2.jpg" />
@@ -54,7 +60,6 @@
       </div>
     </section>
 
-    <h3 class="title" style="margin-top: 35%">LEVEL SCREENS</h3>
     <div class="responsive-table">
       <div class="cell">
         <img class="boceto" src="images/GAME5.png" />
@@ -101,7 +106,7 @@
     </div>
 
     <footer>
-      <p>© 2024 Graphic Designer Portfolio</p>
+      <p>My Portfolio / Last update October 2024</p>
     </footer>
 
     <script src="script.js"></script>
