--- a/web.html
+++ b/web.html
@@ -184,7 +184,7 @@
     <div class="bg bg2"><br /></div>
     <div class="bg bg3"><br /></div>
     <footer>
-      <p>© 2024 Graphic Designer Portfolio</p>
+      <p>My Portfolio / Last update October 2024</p>
     </footer>
 
     <script src="script.js"></script>
