general version finished

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header>
       <nav>
-        <ul class="menu">
+        <ul class="">
           <li><a href="index.html">  Home</a></li>
           <li><a href="web.html">  Web</a></li>
           <li><a href="digital.html">  Digital</a></li>
