FIX CONTACT SECTION

--- a/extra.html
+++ b/extra.html
@@ -32,12 +32,27 @@
             <h1 class="name">Joana Castaneda</h1>
             <p class="sub">Graphic designer</p>
     .        <br></br> -->
+
     <div class="firstInfo">
       <section class="">
         <br />
 
         <div class="responsive-container">
-          <img src="images/contact800.svg" class="responsive-image" />
+          <img src="images/sc.png" class="responsive-image" />
+        </div>
+
+        <div class="container3titles">
+          <div class="box3titles">
+            <a class="contactTxt">Phone:<strong> 343 585 5290</strong> </a>
+          </div>
+          <div class="box3titles">
+            <a class="contactTxt"
+              >Email:<strong> dg.joana24@gmail.com</strong></a
+            >
+          </div>
+          <div class="box3titles">
+            <a class="contactTxt">Address:<strong>Montréal QC</strong> </a>
+          </div>
         </div>
 
         <!-- <div style="text-align: center">
@@ -51,7 +66,7 @@
     <br />
 
     <footer>
-      <p>My Portfolio / Last update October 2024</p>
+      <p>My Portfolio / Last update November 2024</p>
     </footer>
 
     <script src="script.js"></script>
