--- a/digital.html
+++ b/digital.html
@@ -37,19 +37,24 @@
     <div class="gallery" style="background-color: ">
       <div class="bg bg2"><br /></div>
       <div class="bg bg3"><br /></div>
+
+      <img src="images/french.gif" alt="Image 1" class="gallery-item" />
+      <img src="images/kids.gif" alt="Image 2" class="gallery-item" />
+      <img src="images/bebe.png" alt="Image 2" class="gallery-item" />
+
       <img src="images/sale.jpg" alt="Image 1" class="gallery-item" />
       <img src="images/d1.jpg" alt="Image 2" class="gallery-item" />
       <img src="images/d2.jpg" alt="Image 3" class="gallery-item" />
-      <img src="images/sunnies2.jpg" alt="Image 4" class="gallery-item" />
 
+      <img src="images/sunnies2.jpg" alt="Image 4" class="gallery-item" />
       <img src="images/btsadv.jpg" alt="Image 5" class="gallery-item" />
       <img src="images/publicacion1.jpg" alt="Image 6" class="gallery-item" />
 
       <img src="images/Set boundaries.jpg" alt="Image 7" class="gallery-item" />
       <img src="images/info.jpg" alt="Image 8" class="gallery-item" />
       <img src="images/summer.jpg" alt="Image 10" class="gallery-item" />
-      <img src="images/LAVANDA-01.jpg" alt="Image 9" class="gallery-item" />
 
+      <img src="images/LAVANDA-01.jpg" alt="Image 9" class="gallery-item" />
       <img src="images/INFOGRA.jpg" alt="Image 12" class="gallery-item" />
       <img src="images/lona.jpg" alt="Image 11" class="gallery-item" />
     </div>
