--- a/digital.html
+++ b/digital.html
@@ -26,9 +26,10 @@
         <h3 class="title">CONTENT EXAMPLES</h3>
 
         <p>
-          Here are examples of my previous graphic design work, each piece
-          reflects my versatility and attention to detail, whether it's for
-          online platforms or printed materials.
+          Here are some examples of my previous graphic design work. Whether
+          crafted for vibrant online platforms or tangible printed materials,
+          these projects showcase my ability to adapt across different mediums
+          while delivering the intended visual impact and meaning.
 
           <br />
         </p>
