--- a/game.html
+++ b/game.html
@@ -30,21 +30,22 @@
         <h3 class="title">CAPSTONE PROJECT</h3>
 
         <p>
-          Developed a speed-based 2D platformer using Unity, where the player
-          strives to reach the end of the level as quickly as possible while
-          maintaining combos and avoiding enemies. This project was completed in
-          12 weeks as part of my final semester in the program.
+          This project is a fast-paced 2D platformer developed in Unity, where
+          players race to complete levels as quickly as possible while
+          maintaining combos and avoiding enemies. The game was built over a
+          12-week period as part of my final semester capstone project.
 
           <br />
           <br />
 
-          The following images showcase examples of the game’s UI, including the
-          splash screen, main menu, level selection menu, pause scene, as well
-          as some of the art.
+          The images below showcase the game's user interface, including the
+          splash screen, main menu, level selection screen, pause menu, and
+          various examples of in-game artwork.
           <br />
           <br />
-          At the bottom of the page, there is an example of the UI design for a
-          pixel art game
+          At the bottom of the page, you’ll also find a sample UI design created
+          for a separate pixel art game, demonstrating additional design
+          versatility.
         </p>
       </div>
     </section>
