--- a/index.html
+++ b/index.html
@@ -42,17 +42,13 @@
         <div class="photo-itemLarge" data-aos="fade-up">
           <h3 class="title">ABOUT ME</h3>
           <p>
-            Before pursuing a diploma in Game Programming in Canada, 
-            I earned a degree in Graphic Communication Design in Mexico,
-             where I worked for four years as a web and graphic designer.
+            Before diving into code, I built a strong foundation in visual storytelling—earning a degree in Graphic Communication Design in Mexico and spending four years crafting digital experiences as a web and graphic designer.
             <br /><br />
-            I am eager to learn and enhance my skills as I continue
-             my journey in the tech industry. I enjoy analyzing different
-              strategies to create effective content.
+            Later, I moved to Canada to pursue a diploma in Game Programming, combining my creative background with technical skills to bring interactive ideas to life.
             <br />  <br />
 
-            My work experience has been related to these 3 categories: <br>
-            Front end Design, Graphic design and COMMS
+            I’m curious by nature, always eager to learn, experiment, and refine. I love exploring how design, storytelling, and technology can work together to create meaningful digital experiences. <br>
+            My journey so far has taken shape across three key areas: Front-End Design, Graphic Design, and Communications (COMMS).
           </p>
         
         </div>
