--- a/web.html
+++ b/web.html
@@ -48,8 +48,11 @@
           <button onclick="toggleDetails('details1')" class="btnDown">+</button>
           <div class="Det" id="details1" style="display: none">
             <p>
-              This is the first sketch, still in progress to add more sections,
-              content and functionalities.
+              This is the initial sketch of a project in progress as I continue
+              to expand it with additional sections, content, and interactive
+              features. The current layout serves as a foundation, and I am
+              actively refining both the structure and functionality to enhance
+              the overall user experience.
             </p>
           </div>
         </div>
@@ -78,9 +81,12 @@
           <button onclick="toggleDetails('details2')" class="btnDown">+</button>
           <div class="Det" id="details2" style="display: none">
             <p>
-              Development of 6 minisites that correspond each one to a different
-              product: Azúcar BC, Sweet-O, Svetia, Piloncillo Genuino, Mascabado
-              BC and Endulzante Genuino.
+              Developed a series of six branded minisites, each tailored to
+              showcase a distinct product: Azúcar BC, Sweet-O, Svetia,
+              Piloncillo Genuino, Mascabado BC, and Endulzante Genuino. Each
+              site was uniquely designed to reflect the identity, tone, and
+              target audience of its respective product, ensuring a cohesive yet
+              customized digital experience across the full lineup.
             </p>
           </div>
         </div>
@@ -108,9 +114,13 @@
           <button onclick="toggleDetails('details3')" class="btnDown">+</button>
           <div class="Det" id="details3" style="display: none">
             <p>
-              Make more intuitive the reservations for the food and simplied the
-              number of sections and pages. Include options to cancel, modified
-              and buy membership.
+              Redesigned the reservation flow to make the user experience more
+              intuitive and streamlined. Simplified the overall site structure
+              by reducing the number of sections and pages, resulting in faster
+              navigation and clearer user pathways. Additionally, integrated key
+              features such as reservation cancellation, modification options,
+              and membership purchasing to enhance functionality and user
+              control.
             </p>
           </div>
         </div>
@@ -125,8 +135,12 @@
           <button onclick="toggleDetails('details4')" class="btnDown">+</button>
           <div class="Det" id="details4" style="display: none">
             <p>
-              School project, creation of a 2D game where players must navigate
-              obstacles while the speed gradually increases.
+              Developed as a school project, this 2D game challenges players to
+              navigate an increasingly difficult environment filled with
+              obstacles, while the game speed progressively intensifies. The
+              project focused on core gameplay mechanics, player responsiveness,
+              and dynamic difficulty scaling to create a fast-paced and engaging
+              experience.
             </p>
           </div>
         </div>
@@ -147,8 +161,12 @@
           <button onclick="toggleDetails('details5')" class="btnDown">+</button>
           <div class="Det" id="details5" style="display: none">
             <p>
-              Internal government app with featuring localization functions to
-              help users find nearby services.
+              Developed an internal government application featuring
+              localization functionality to assist users in identifying and
+              accessing nearby public services. The app was designed with
+              usability and accessibility in mind, providing real-time
+              location-based support to improve navigation and service reach
+              within the community.
             </p>
           </div>
         </div>
@@ -174,8 +192,11 @@
           <button onclick="toggleDetails('details6')" class="btnDown">+</button>
           <div class="Det" id="details6" style="display: none">
             <p>
-              Players will complete various levels and challenges to finish the
-              game.
+              Players progress through a series of levels and challenges, each
+              designed to test their skills. Completing these stages is
+              essential to advancing in the game and ultimately reaching the
+              final objective, offering a sense of progression and achievement
+              throughout the gameplay experience.
             </p>
           </div>
         </div>
