--- a/digital.html
+++ b/digital.html
@@ -42,6 +42,11 @@
       <img src="images/french.gif" alt="Image 1" class="gallery-item" />
       <img src="images/kids.gif" alt="Image 2" class="gallery-item" />
       <img src="images/bebe.png" alt="Image 2" class="gallery-item" />
+
+      <img src="images/SV1.png" alt="Image 2" class="gallery-item" />
+      <img src="images/SV2.png" alt="Image 2" class="gallery-item" />
+      <img src="images/SV3.png" alt="Image 2" class="gallery-item" />
+
       <img src="images/TURTLESsquare.png" alt="Image 2" class="gallery-item" />
 
       <img src="images/sale.jpg" alt="Image 1" class="gallery-item" />
