--- a/digital.html
+++ b/digital.html
@@ -12,11 +12,11 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="web.html">Web</a></li>
-          <li><a href="digital.html">Digital</a></li>
-          <li><a href="game.html">Game</a></li>
-          <li><a href="extra.html">Contact</a></li>
+          <li><a href="index.html"> Home</a></li>
+          <li><a href="digital.html"> Design</a></li>
+          <li><a href="web.html"> Web</a></li>
+          <li><a href="game.html"> Gaming</a></li>
+          <li><a href="extra.html"> Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -26,10 +26,10 @@
         <h3 class="title">CONTENT EXAMPLES</h3>
 
         <p>
-          Here are some examples of my previous graphic design work. Whether
-          crafted for vibrant online platforms or tangible printed materials,
-          these projects showcase my ability to adapt across different mediums
-          while delivering the intended visual impact and meaning.
+          Here are some examples of my previous design work. Whether crafted for
+          vibrant online platforms or tangible printed materials, these projects
+          showcase my ability to adapt across different mediums while delivering
+          the intended visual impact and meaning.
 
           <br />
         </p>
@@ -39,13 +39,13 @@
       <div class="bg bg2"><br /></div>
       <div class="bg bg3"><br /></div>
 
+      <img src="images/SV3.png" alt="Image 2" class="gallery-item" />
+      <img src="images/SV2.png" alt="Image 2" class="gallery-item" />
+      <img src="images/SV1.png" alt="Image 2" class="gallery-item" />
+
       <img src="images/french.gif" alt="Image 1" class="gallery-item" />
       <img src="images/kids.gif" alt="Image 2" class="gallery-item" />
       <img src="images/bebe.png" alt="Image 2" class="gallery-item" />
-
-      <img src="images/SV1.png" alt="Image 2" class="gallery-item" />
-      <img src="images/SV2.png" alt="Image 2" class="gallery-item" />
-      <img src="images/SV3.png" alt="Image 2" class="gallery-item" />
 
       <img src="images/TURTLESsquare.png" alt="Image 2" class="gallery-item" />
 
