--- a/game.html
+++ b/game.html
@@ -13,11 +13,11 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="web.html">Web</a></li>
-          <li><a href="digital.html">Digital</a></li>
-          <li><a href="game.html">Game</a></li>
-          <li><a href="extra.html">Contact</a></li>
+          <li><a href="index.html"> Home</a></li>
+          <li><a href="digital.html"> Design</a></li>
+          <li><a href="web.html"> Web</a></li>
+          <li><a href="game.html"> Gaming</a></li>
+          <li><a href="extra.html"> Contact</a></li>
         </ul>
       </nav>
     </header>
