--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
       <nav>
         <ul class="">
           <li><a href="index.html">  Home</a></li>
+       
+          <li><a href="digital.html">  Design</a></li>
           <li><a href="web.html">  Web</a></li>
-          <li><a href="digital.html">  Digital</a></li>
-          <li><a href="game.html">  Game</a></li>
+          <li><a href="game.html">  Gaming</a></li>
           <li><a href="extra.html">  Contact</a></li>
         </ul>
       </nav>
@@ -42,13 +43,19 @@
         <div class="photo-itemLarge" data-aos="fade-up">
           <h3 class="title">ABOUT ME</h3>
           <p>
-            Before diving into code, I built a strong foundation in visual storytelling—earning a degree in Graphic Communication Design in Mexico and spending four years crafting digital experiences as a web and graphic designer.
+            Before diving into code, I built a strong foundation in visual storytelling—earning 
+            a degree in Graphic Communication Design in Mexico and spending four years crafting 
+            digital experiences as a web and graphic designer.
             <br /><br />
-            Later, I moved to Canada to pursue a diploma in Game Programming, combining my creative background with technical skills to bring interactive ideas to life.
+            Later, I moved to Canada to pursue a diploma in Game Programming, combining my 
+            creative background with technical skills to bring interactive ideas to life.
             <br />  <br />
 
-            I’m curious by nature, always eager to learn, experiment, and refine. I love exploring how design, storytelling, and technology can work together to create meaningful digital experiences. <br>
-            My journey so far has taken shape across three key areas: Front-End Design, Graphic Design, and Communications (COMMS).
+            I’m curious and always eager to learn, experiment, and refine. I love exploring 
+            how design and technology can work together to create meaningful digital 
+            experiences. <br>
+            My journey so far has taken shape across three key areas:
+             Front-End Design, Graphic Design, and Communications (COMMS).
           </p>
         
         </div>
