--- a/digital.html
+++ b/digital.html
@@ -43,6 +43,10 @@
       <img src="images/SV2.png" alt="Image 2" class="gallery-item" />
       <img src="images/SV1.png" alt="Image 2" class="gallery-item" />
 
+      <img src="images/sv5.png" alt="Image 2" class="gallery-item" />
+      <img src="images/sv6.png" alt="Image 2" class="gallery-item" />
+      <img src="images/sv4.png" alt="Image 2" class="gallery-item" />
+
       <img src="images/french.gif" alt="Image 1" class="gallery-item" />
       <img src="images/kids.gif" alt="Image 2" class="gallery-item" />
       <img src="images/bebe.png" alt="Image 2" class="gallery-item" />
