--- a/email.html
+++ b/email.html
@@ -60,7 +60,7 @@
           <img src="images/sc.png" class="responsive-image" />
         </div>-->
 
-        <div class="container3titles">
+        <div class="containerEmail">
           <div class="box3titles">
             <div class="scroll-box">
               <img src="images/sample.png" alt="Long Image" />
