--- a/email.html
+++ b/email.html
@@ -68,7 +68,7 @@
           </div>
           <div class="box3titles">
             <div class="scroll-box">
-              <img src="images/soon.svg" alt="Long Image" />
+              <img src="images/svetiaEmail.jpg" alt="Long Image" />
             </div>
           </div>
           <div class="box3titles">
